[gd_scene load_steps=3 format=3 uid="uid://bp847kvytvbu6"]

[ext_resource type="Script" path="res://Scripts/Battle_Sim/battle_rewards.gd" id="1_klkux"]
[ext_resource type="Texture2D" uid="uid://dwgrgwtu3550k" path="res://Resources/TestArt/Test.png" id="2_peuei"]

[node name="BattleRewards" type="Node2D"]
script = ExtResource("1_klkux")

[node name="TextureRect" type="TextureRect" parent="."]
offset_left = 723.0
offset_top = 82.0
offset_right = 1957.0
offset_bottom = 735.0
scale = Vector2(0.370283, 0.557489)
texture = ExtResource("2_peuei")

[node name="Label" type="Label" parent="TextureRect"]
layout_mode = 0
offset_left = 456.408
offset_top = 17.9376
offset_right = 527.408
offset_bottom = 56.9376
scale = Vector2(4.06145, 2.42899)
text = "VICTORY!"

[node name="HBoxContainer" type="HBoxContainer" parent="TextureRect"]
layout_mode = 0
offset_left = 351.083
offset_top = 87.8941
offset_right = 488.083
offset_bottom = 191.894
scale = Vector2(3.57252, 1.59212)

[node name="VBoxContainer" type="VBoxContainer" parent="TextureRect/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 1.35

[node name="GoldReward" type="Label" parent="TextureRect/HBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 6
text = "Gold Reward
"

[node name="XpReward" type="Label" parent="TextureRect/HBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 6
text = "XP Reward"

[node name="Gold" type="Label" parent="TextureRect/HBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 6
text = "Gold
"

[node name="Xp" type="Label" parent="TextureRect/HBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 6
text = "XP"

[node name="VariableContainer" type="VBoxContainer" parent="TextureRect/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.45

[node name="GoldReward" type="Label" parent="TextureRect/HBoxContainer/VariableContainer"]
layout_mode = 2
size_flags_vertical = 6
text = "0
"
horizontal_alignment = 2

[node name="XpReward" type="Label" parent="TextureRect/HBoxContainer/VariableContainer"]
layout_mode = 2
size_flags_vertical = 6
text = "0
"
horizontal_alignment = 2

[node name="Gold" type="Label" parent="TextureRect/HBoxContainer/VariableContainer"]
layout_mode = 2
size_flags_vertical = 6
text = "0
"
horizontal_alignment = 2

[node name="Xp" type="Label" parent="TextureRect/HBoxContainer/VariableContainer"]
layout_mode = 2
size_flags_vertical = 6
text = "0"
horizontal_alignment = 2

[node name="Button" type="Button" parent="."]
offset_left = 1783.0
offset_top = 617.0
offset_right = 1862.0
offset_bottom = 648.0
text = "Continue
"

[connection signal="button_down" from="Button" to="." method="_on_button_button_down"]
